--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -23,11 +23,17 @@
 	.logo__text
 		font-size: 16px
 		width: 200px
+	.owl-prev
+		margin-right: 430px
+	.owl-next
+		margin-left: 430px
 		
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
+	.owl-buttons
+		display: none
 	.logo__text
 		width: 169px
 	.big-link__text
@@ -64,6 +70,14 @@
 		margin: 80px 0
 	.parallax-front_bottom
 		top: 400px
+	.slider__text
+		font-size: 40px
+	#slider-front
+		height: 300px
+	.slider__text
+		top: 80px
+	.slider__btn
+		top: 200px
 
 
 
@@ -104,6 +118,11 @@
 		background-size: cover
 	.attention-block p
 		font-size: 15px
+	.slider__text
+		top: 60px
+	.slider__btn
+		top: 230px
+
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 550px)
@@ -117,6 +136,9 @@
 		width: 24%
 	.col-mobile-icons
 		width: 76%
+	.slider__text
+		font-size: 32px
+	padding: 0 10px
 
 
 
