--- a/sass/main.sass
+++ b/sass/main.sass
@@ -33,55 +33,135 @@ body textarea:required:valid
 // -------
 // СЛАЙДЕР
 // -------
-.jssorb05
-	position: absolute
-	div
-		position: absolute
-		width: 10px
-		height: 10px
-		cursor: pointer
-		border-radius: 50%
-		background: #fff
-	.av
-		position: absolute
-		width: 10px
-		height: 10px
+.owl-carousel
+	.owl-wrapper
+		&:after
+			content: "."
+			display: block
+			clear: both
+			visibility: hidden
+			line-height: 0
+			height: 0
+		display: none
+		position: relative
+		-webkit-transform: translate3d(0px, 0px, 0px)
+	display: none
+	position: relative
+	width: 100%
+	-ms-touch-action: pan-y
+	.owl-wrapper-outer
 		overflow: hidden
-		background: #0071AD
-		cursor: pointer 
-	div
-		&:hover
-			background-position: -37px -7px
-	.av
-		&:hover
-			background-position: -37px -7px
-		background-position: -67px -7px
-	.dn
-		background-position: -97px -7px
-		&:hover
-			background-position: -97px -7px
-
-.jssora22l, .jssora22r
-	display: block
+		position: relative
+		width: 100%
+		&.autoHeight
+			-webkit-transition: height 500ms ease-in-out
+			-moz-transition: height 500ms ease-in-out
+			-ms-transition: height 500ms ease-in-out
+			-o-transition: height 500ms ease-in-out
+			transition: height 500ms ease-in-out
+	.owl-item
+		float: left
+	// .owl-item.active img
+	// 	z-index: 99
+	// 	left: 50%
+	// 	margin-left: -950px
+.owl-controls
+	.owl-page, .owl-buttons div
+		cursor: pointer
+	-webkit-user-select: none
+	-khtml-user-select: none
+	-moz-user-select: none
+	-ms-user-select: none
+	user-select: none
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+.grabbing
+	cursor: url(grabbing.png) 8 8, move
+.owl-carousel
+	.owl-wrapper, .owl-item
+		-webkit-backface-visibility: hidden
+		-moz-backface-visibility: hidden
+		-ms-backface-visibility: hidden
+		-webkit-transform: translate3d(0, 0, 0)
+		-moz-transform: translate3d(0, 0, 0)
+		-ms-transform: translate3d(0, 0, 0)
+// theme
+.owl-theme .owl-controls
+	margin-top: 10px
+	text-align: center
+	.owl-buttons 
+		height: 40px
+		position: absolute
+		width: 100%
+		top: 50%
+		margin-top: -20px
+		div
+			color: #FFF
+			display: inline-block
+			zoom: 1
+			*display: inline
+	.owl-page
+		display: inline-block
+		zoom: 1
+		*display: inline
+		span
+			display: block
+			width: 10px
+			height: 10px
+			margin: 0 7px
+			-webkit-border-radius: 20px
+			-moz-border-radius: 20px
+			border-radius: 20px
+			background: #fff
+		&.active span
+			background: #0071AD
+	&.clickable .owl-page:hover span
+		filter: Alpha(Opacity = 100)
+		opacity: 1
+	.owl-page span.owl-numbers
+		height: auto
+		width: auto
+		color: #FFF
+		padding: 2px 10px
+		font-size: 12px
+		-webkit-border-radius: 30px
+		-moz-border-radius: 30px
+		border-radius: 30px
+.owl-item.loading
+	min-height: 150px
+	background: url(../img/AjaxLoader.gif) no-repeat center center
+// кастомные стили для слайдера
+#slider-front
+	height: 370px
+	overflow: hidden 
+	.item img
+		display: block
+		width: 1900px
+		height: 370px
+		margin: 0 auto
+.owl-pagination
 	position: absolute
+	width: 100%
+	top: 20px
+	line-height: 10px
+.owl-prev
+	background-image: url(../img/slider-arrows.png)
+	background-position: -15px -41px
 	width: 40px
 	height: 40px
-	cursor: pointer
-	background: url(../img/a33.png) center center no-repeat
-	overflow: hidden
 	border-radius: 50%
-.jssora22l
-	background-position: -15px -41px
-.jssora22r
+	margin-right: 530px
+.owl-next
+	background-image: url(../img/slider-arrows.png)
 	background-position: -65px -41px
-
-// кастомные стили для слайдера
+	width: 40px
+	height: 40px
+	border-radius: 50%
+	margin-left: 530px
 .slider__text
 	position: absolute
 	top: 120px
-	width: 830px
-	left: 50%
-	margin-left: -415px
+	width: 100%
+	left: 0
 	font-weight: bold
 	line-height: 1.2
 	color: #fff
