--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -153,7 +153,9 @@
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
-	#slider_front 
+	h3
+		font-size: 18px
+	.thumbnail-news
 		display: none
 	.col-xxs-12
 		width: 100%
@@ -180,11 +182,14 @@
 		margin-right: -15px
 	.big-link
 		padding: 0
-
-
-/* Custom, iPhone Retina */
-@media only screen and (max-width : 320px)
-	/**/
+	.news-date
+		padding-bottom: 0
+	.departments li a
+		font-size: 15px
+	.header__search_extra
+		display: none
+	.header__search 
+		padding: 25px 0 15px
 
 
 /*==========  Mobile First Method  ==========*/
