--- a/sass/header.sass
+++ b/sass/header.sass
@@ -71,6 +71,64 @@ header
 	.col-extra
 		width: 20%
 
+.header__search
+	background: #eee
+	padding: 35px 0 30px
+	position: relative
+	display: none
+.header__search__input
+	border: none
+	border-bottom: 2px solid #0D1E3E
+	width: 100%
+	background: none
+	text-transform: uppercase
+	font-size: 18px
+	&::-webkit-input-placeholder
+		color: #0D1E3E
+		opacity: 1
+	&:-moz-placeholder
+		color: #0D1E3E
+		opacity: 1
+	&::-moz-placeholder
+		color: #0D1E3E
+		opacity: 1
+	&:-ms-input-placeholder
+		color: #0D1E3E
+		opacity: 1
+	&:focus
+		outline: none
+.header__search_extra
+	text-align: right
+	margin-bottom: 0
+	a
+		margin-left: 15px
+		text-decoration: underline
+		color: #0D1E3E
+		&:hover
+			text-decoration: none
+.header__search__submit
+	position: absolute
+	background: transparent url(../img/sprite-main.png)
+	background-position: -184px -66px
+	width: 20px
+	height: 20px
+	border: none
+	outline: none
+	text-indent: -100px
+	display: block
+	position: absolute
+	right: 16px
+	top: 3px
+	padding: 0
+	opacity: 0.4
+	&:hover
+		opacity: 1
+.icon-x
+	font-size: 40px
+	font-family: monospace
+	cursor: pointer
+	line-height: 1.35
+	float: right
 .header__mid
 	border-bottom: 1px solid #C6C6C6
 	transition: 0.1s ease
