--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -27,7 +27,14 @@
 		margin-right: 430px
 	.owl-next
 		margin-left: 430px
-		
+	.leadership__block
+		margin-left: 40px
+	.btn_grey_second
+		margin-left: 0
+		margin-top: 15px
+	
+
+
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
@@ -78,12 +85,27 @@
 		top: 80px
 	.slider__btn
 		top: 200px
-
-
+	aside
+		margin-top: 50px
+		margin-bottom: 70px
+	.leadership__block
+		display: block
+		margin: 0
+	.list-leadership_icons .leadership-name
+		margin: 15px 0
+	.departments_grey__list li
+		height: auto
+	.leadership_branche .leadership-name
+		margin: 15px 0
+	.btn_grey_second
+		margin-left: 23px
+		margin-top: 0
+	.leadership_branche ul
+		padding-bottom: 0
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-	.header__nav, header .contact, .nav_footer, .header__top, .extra-block, .logo_footer
+	.header__nav, header .contact, .nav_footer, .header__top, .extra-block, .logo_footer, i.sprite-main_pdf
 		display: none 
 	.row__big-link .col-sm-6:nth-of-type(1) .big-link, .news-block
 		margin-bottom: 20px
@@ -122,6 +144,12 @@
 		top: 60px
 	.slider__btn
 		top: 230px
+	.btn_grey_second
+		display: block
+		margin-left: 0
+		margin-top: 20px
+	
+
 
 
 /* Extra Small Devices, Phones */
@@ -190,6 +218,21 @@
 		display: none
 	.header__search 
 		padding: 25px 0 15px
+	.file-list li>* a
+		display: block
+		margin-top: 10px
+	.departments_grey__list li
+		max-width: 100%
+		padding: 24px 10px 5px
+	.leadership-icon i
+		margin-right: 10px
+	.leadership-name_big
+		line-height: 1.2
+		font-size: 24px
+	.leadership-descr_big
+		font-size: 18px
+		line-height: 1.4
+		
 
 
 /*==========  Mobile First Method  ==========*/
