--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -32,7 +32,8 @@
 	.btn_grey_second
 		margin-left: 0
 		margin-top: 15px
-	
+	.table-wrapper
+		overflow-x: scroll
 
 
 
@@ -232,7 +233,13 @@
 	.leadership-descr_big
 		font-size: 18px
 		line-height: 1.4
-		
+	.search-csv__input
+		display: block
+	.submit_blue
+		display: block
+		margin: 0
+		margin-top: 15px
+		width: 100%
 
 
 /*==========  Mobile First Method  ==========*/
