--- a/sass/header.sass
+++ b/sass/header.sass
@@ -34,6 +34,8 @@ h4
 	font-size: 12px
 	font-weight: normal
 article 
+	h2
+		font-size: 24px
 	h4
 		font-size: 16px
 a
@@ -150,6 +152,7 @@ header
 	padding: 13px 0
 .logo
 	display: inline-block
+	text-decoration: none
 .logo:hover
 	text-decoration: none
 .outer-logo__img
