--- a/sass/main.sass
+++ b/sass/main.sass
@@ -33,6 +33,7 @@ input
 	border: 1px solid #C5C5C5
 	line-height: 40px
 	font-size: 16px
+	padding: 0 5px
 	
 
 // -------
@@ -584,9 +585,11 @@ footer .logo
 	color: #666
 	li
 		margin-bottom: 15px
+		display: flex
+		justify-content: flex-start
+		align-items: center
 	li > *
 		display: inline-block
-		vertical-align: middle
 		a
 			margin-right: 24px
 			color: #666
@@ -830,14 +833,156 @@ thead
 	font-weight: bold
 	font-size: 18px
 .csv-table
-	margin-bottom: 100px
-	margin-top: 30px
+	min-width: 1140px
 	td
 		padding: 3px 10px
+.table-wrapper
+	margin-bottom: 100px
+	margin-top: 30px
 
 
 
+.sprite-main_home
+	background-position: -176px -151px
+	width: 30px
+	height: 25px
+	margin-right: 15px
+	vertical-align: middle
+.fancybox
+	display: inline-block
+	padding: 3px
+	border: 1px solid #CCCCCC
+	margin-right: 6px
+	margin-bottom: 6px
 
+
+.open-panels
+	list-style-type: none
+	padding: 0
+	margin: 30px 0
+	li
+		border-radius: 3px
+		border: 2px solid #626262
+		margin-bottom: 22px
+.open-panels__link
+	font-size: 18px
+	padding: 0px 23px
+	margin: 0
+	line-height: 44px
+	position: relative
+	&:after
+		display: inline-block
+		clear: both
+		margin-left: 12px
+		content: ""
+		position: absolute
+		right: 20px
+		top: 19px
+		width: 10px
+		height: 7px
+		transition: 0.3s linear
+		background-image: url(../img/sprite-main.png)
+		background-position: -73px -79px
+	&.opened:after
+		transform: rotate(180deg)
+.open-panels__hide
+	padding: 15px 23px
+	display: none
+.open-panels__head
+	margin-top: 70px
+
+.widget-panel
+	padding: 5px 25px 10px
+	border: 1px solid #A2A2A2
+	color: #000
+	margin-bottom: 17px
+.table-calendar
+	width: 100%
+	text-align: center
+	td
+		padding: 3px 5px
+.calendar__date
+	text-align: center
+.widget-calendar
+	font-size: 12px
+.date_active
+	color: #175f8b
+.date-name
+	font-size: 10px
+	td
+		padding-bottom: 7px
+
+
+.widget-subscribe
+	padding-top: 0
+	padding-bottom: 15px
+.submit_grey
+	background: #fff
+	color: #666666
+	width: 100%
+	text-align: center
+	border: 2px solid #A2A2A2
+	text-transform: uppercase
+	border-radius: 0
+	font-size: 14px
+	line-height: 26px
+.input_subscribe
+	border: none
+	border-bottom: 2px solid #A2A2A2
+	width: 100%
+	margin-bottom: 15px
+	font-size: 12px
+	line-height: 22px
+	padding: 0
+.btn_all-news_nonfloat
+	float: none
+
+
+.input_doc-search
+	width: 100%
+	padding: 5px 10px 5px 37px
+	border: none
+	border-bottom: 2px solid #6F6F6F
+	border-radius: 0
+	font-size: 14px
+	line-height: 1.6
+select
+	border-radius: 3px
+	border: 2px solid #626262
+	width: 50%
+	font-size: 16px
+.select-group
+	display: flex
+	justify-content: space-between
+	margin-top: 30px
+	select
+		width: 48%
+		padding: 6px 15px
+.btn_doc-search
+	width: 245px
+	height: 35px
+	line-height: 29px
+	text-align: center
+	padding: 0
+	margin-top: 35px
+	border-radius: 0
+.btn_doc-search_submit
+	background: none
+	margin-right: 25px
+.btn_doc-search_reset
+	background: #175F8B
+	color: #fff
+.form-doc-search
+	margin-top: 30px
+	margin-bottom: 50px
+	position: relative
+.sprite-main_doc-search
+	background-position: -181px -184px
+	width: 20px
+	height: 20px
+	position: absolute
+	top: 3px
+	left: 0
 
 
 
