Add contrast version

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -149,6 +149,22 @@
 		display: block
 		margin-left: 0
 		margin-top: 20px
+	.select-group 
+		display: block
+		select
+			display: block
+			width: 100%
+			margin-bottom: 25px
+	.btn_doc-search
+		margin-top: 0
+		margin-bottom: 25px
+		display: block
+	.form-login
+		display: block
+	.form-login_input
+		display: block
+		width: 100%
+
 	
 
 
@@ -177,6 +193,9 @@
 		width: 100%
 	.col-xs-offset-3
 		margin-left: 0
+	.btn_large
+		padding: 5px 10px
+		line-height: 1.4
 
 
 /* Extra Small Devices, Phones */
@@ -240,6 +259,8 @@
 		margin: 0
 		margin-top: 15px
 		width: 100%
+	.cabinet-page p a
+		display: inline-block
 
 
 /*==========  Mobile First Method  ==========*/
