--- a/sass/main.sass
+++ b/sass/main.sass
@@ -208,6 +208,7 @@ input
 	color: #333
 	padding: 12px 0
 	transition: 0.15s
+	text-decoration: none
 	&:hover
 		color: #333
 		text-decoration: none
@@ -983,6 +984,219 @@ select
 	position: absolute
 	top: 3px
 	left: 0
+
+
+// СТРАНИЦА КОНТАКТЫ
+.btn_red
+	margin-left: auto
+	display: block
+	border-color: #FF5D2F
+	color: #333
+	font-size: 12px
+	width: 140px
+	height: 30px
+	line-height: 24px
+	padding: 0
+	padding-left: 12px
+	&:hover
+		background: none
+		color: #333
+.sprite-main_print
+	background-position: -157px -187px 
+	width: 15px
+	height: 15px
+	vertical-align: middle
+	margin-right: 8px
+.img-map
+	width: 100%
+.contact-flex__item
+	text-align: center
+	width: 30%
+.contact-flex__head
+	font-size: 24px
+	font-weight: normal
+.contact-flex__descr
+	font-size: 18px
+.contact-flex
+	margin-top: 40px
+	display: flex
+	justify-content: space-between
+.btn_all-contacts
+	width: 245px
+	height: 35px
+	line-height: 29px
+	margin: 40px auto 0
+	padding: 0
+	text-align: center
+	display: block
+
+
+// СТРАНИЦА ЛИЧНЫЙ КАБНЕТ
+.cabinet-page
+	h3
+		font-size: 18px
+		font-weight: normal
+.btn_large
+	font-size: 18px
+	line-height: 57px
+	text-align: center
+	margin: 30px 0
+	font-weight: normal
+	color: #016DAE
+.btn_large-outer
+	text-align: center
+.form-login
+	display: flex
+	justify-content: space-between
+	margin-bottom: 30px
+.form-login_input
+	width: 30%
+	margin-top: 15px
+	border: 3px solid #C6C6C6
+	border-radius: 0
+	color: #0a1e3f
+	padding: 0 23px
+	line-height: 44px
+	font-size: 14px
+.form-login__btn
+	background: none
+	border-color: #016DAE
+	color: #016dae
+	font-size: 18px
+	text-transform: uppercase
+	font-weight: normal
+	&:hover
+		background: #016DAE
+
+
+
+// tabs
+.tabs
+	display: block
+	border: 3px solid #016DAE
+	margin-bottom: 30px
+	> div > div
+		padding: 147px 125px 35px
+	ul
+		margin: 0px
+		padding: 0px
+		li
+			border-bottom: 3px solid #016DAE
+			border-right: 3px solid #016DAE
+			margin: 0px
+			padding: 0px
+			cursor: pointer
+			text-transform: uppercase
+			width: 25%
+			display: block
+			float: left
+			padding: 10px 15px
+			background: #fff
+			color: #192A48
+			height: 70px
+			font-weight: bold
+			text-align: center
+			line-height: 45px
+			&:last-child
+				border-right: none
+			&.active
+				background: #016DAE
+				color: #fff
+				&:hover
+					background: #016DAE
+			&:hover
+				background: #016DAE
+				color: #fff
+			.tabs__inner
+				display: inline-block
+				vertical-align: middle
+				line-height: 16px
+.form-tabs
+.form-tabs__select
+	width: 100%
+	text-transform: uppercase
+	padding: 10px 25px
+.input-group__input
+	width: 100%
+	border: none
+	border-bottom: 2px solid #152645
+	border-radius: 0
+	line-height: 1.4
+	font-size: 18px
+	padding: 0
+	margin-top: 30px
+.form-tabs__select_compact
+	border: none
+	border-bottom: 2px solid #152645
+	border-radius: 0
+	padding-left: 0
+	padding-right: 0
+	margin-top: 30px
+.form-tabs__textarea
+	margin-top: 30px
+	width: 100%
+	display: block
+	border: none
+	height: 110px
+	border-bottom: 2px solid #152645
+	max-width: 100%
+
+
+
+input[type="checkbox"]
+	display:none
+input[type="checkbox"] + label
+	font: 18px bold
+	color: #00001B
+	cursor: pointer
+input[type="checkbox"] + label::before
+	content: ""
+	display: inline-block
+	height: 20px
+	width: 20px
+	background-image: url(../img/sprite-main.png)
+	background-repeat: no-repeat
+	vertical-align: middle
+	margin-right: 5px
+input[type="checkbox"] + label::before
+	background-position: -81px -190px
+input[type="checkbox"]:checked + label::before
+	background-position: -51px -190px
+.form-tabs__checkbox
+	margin-right: 100px
+	margin-top: 30px
+	display: inline-block
+input[type="file"]
+	border: none
+	vertical-align: top
+	margin-top: 30px 
+	margin-bottom: 30px
+	padding: 0
+	line-height: 1.2
+.form-tabs__submit
+	width: 360px
+	max-width: 100%
+	display: block
+	margin-top: 30px
+	border: 2px solid #152645
+	background: #fff
+	color: #152645
+	transition: 0.15s
+	&:hover
+		background: #152645
+		color: #fff
+	&:disabled
+		color: #80899A
+		&:hover
+			background: #fff
+			color: #80899A
+
+
+
+
+
+
+
 
 
 
